# yandex_webmaster_project

./: .gitignore  pyproject.toml  requirements.txt  run.py  test_etl_v2.py  test_fixed_etl.py
config/: settings.py
docs/: README.md
scripts/: check_status.py  daily_loader.py  init_database.py  run_etl.py  run_etl_daily.sh  run_full_etl.py
scripts/sql/: create_etl_metadata.sql
src/api/: webmaster_client.py
src/core/: collector.py  database.py  webmaster_loader.py.backup
src/etl/: webmaster_etl_processor.py  webmaster_etl_processor_fixed.py  webmaster_etl_processor_v2.py  webmaster_processor.py
src/models/: database.py
src/models/ppl/: __init__.py  models.py
src/models/rdl/: __init__.py  models.py
src/services/: data_loader.py  date_manager.py
src/yandex_webmaster/: __init__.py  pipeline.py
src/yandex_webmaster/cli/: main.py
src/yandex_webmaster/core/: __init__.py  config.py  models.py
